--- a/socks-shop/federationservice/package.json
+++ b/socks-shop/federationservice/package.json
@@ -15,7 +15,8 @@
     "eslint-config-next": "13.4.4",
     "mysql": "^2.18.1",
     "next": "13.4.4",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "18.2.8"
