--- a/socks-shop/deploy/kubernetes/complete-demo.yaml
+++ b/socks-shop/deploy/kubernetes/complete-demo.yaml
@@ -225,6 +225,25 @@ spec:
       nodeSelector:
         beta.kubernetes.io/os: linux
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nextjs-docker
+  annotations:
+        prometheus.io/scrape: 'true'
+  labels:
+    name: nextjs-docker
+  namespace: sock-shop
+spec:
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: 3000
+    nodePort: 30000
+  selector:
+    name: nextjs-docker
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
