fix: Updating docker image in yaml file

--- a/onlineboutique/release/kubernetes-manifests.yaml
+++ b/onlineboutique/release/kubernetes-manifests.yaml
@@ -886,7 +886,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: apiservice
+          image: filippa/apiservice:latest
           ports:
           - containerPort: 9090
           env:
