--- a/onlineboutique/kubernetes-manifests/kustomization.yaml
+++ b/onlineboutique/kubernetes-manifests/kustomization.yaml
@@ -27,6 +27,7 @@ resources:
  - recommendationservice.yaml
  - redis.yaml
  - shippingservice.yaml
+ - apiservice.yaml
 # components:
 # - ../kustomize/components/cymbal-branding
 # - ../kustomize/components/google-cloud-operations
