feat: Display external products enabled #16

--- a/onlineboutique/src/productcatalogservice/Dockerfile
+++ b/onlineboutique/src/productcatalogservice/Dockerfile
@@ -38,7 +38,7 @@ COPY products.json .
 # See https://golang.org/pkg/runtime/
 ENV GOTRACEBACK=single
 
-EXPOSE 3550
+EXPOSE 3550 3560
 ENTRYPOINT ["/src/server"]
 
 FROM without-grpc-health-probe-bin
