--- a/onlineboutique/kubernetes-manifests/productcatalogservice.yaml
+++ b/onlineboutique/kubernetes-manifests/productcatalogservice.yaml
@@ -27,23 +27,26 @@ spec:
     spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
-      securityContext:
-        fsGroup: 1000
-        runAsGroup: 1000
-        runAsNonRoot: true
-        runAsUser: 1000
+      # securityContext:
+      #   fsGroup: 1000
+      #   runAsGroup: 1000
+      #   runAsNonRoot: true
+      #   runAsUser: 1000
       containers:
       - name: server
-        securityContext:
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop:
-              - ALL
-          privileged: false
-          readOnlyRootFilesystem: true
+        # securityContext:
+        #   allowPrivilegeEscalation: false
+        #   capabilities:
+        #     drop:
+        #       - ALL
+        #   privileged: false
+        #   readOnlyRootFilesystem: true
         image: productcatalogservice
         ports:
         - containerPort: 3550
+          name: grpc
+        - containerPort: 3560
+          name: rest-api
         env:
         - name: PORT
           value: "3550"
@@ -75,3 +78,6 @@ spec:
   - name: grpc
     port: 3550
     targetPort: 3550
+  - name: rest-api
+    port: 3560
+    targetPort: 3660
