fix: Update docker file and fix minor mistake

--- a/onlineboutique/src/apiservice/Dockerfile
+++ b/onlineboutique/src/apiservice/Dockerfile
@@ -17,7 +17,7 @@ RUN apk add --no-cache ca-certificates \
     busybox-extras net-tools bind-tools
 WORKDIR /src
 COPY --from=builder /go/bin/apiservice /src/server
-# COPY shops.json .
+COPY shops.json .
 
 # Definition of this variable is used by 'skaffold debug' to identify a golang binary.
 # Default behavior - a failure prints a stack trace for the current goroutine.
