--- a/socks-shop/kubernetes-manifests/kustomization.yaml
+++ b/socks-shop/kubernetes-manifests/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - carts.yaml
 - catalogue-db.yaml
 - catalogue.yaml
+- front-end.yaml
 - nextjs-docker.yaml
 - orders-db.yaml
 - orders.yaml
