--- a/socks-shop/federationservice/package.json
+++ b/socks-shop/federationservice/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.4.4",
     "mysql": "^2.18.1",
     "next": "13.4.4",
+    "prom-client": "^14.2.0",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
   },
