--- a/onlineboutique/release/kubernetes-manifests.yaml
+++ b/onlineboutique/release/kubernetes-manifests.yaml
@@ -895,43 +895,44 @@ spec:
   selector:
     name: apiservice
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: hub
+  labels:
+    name: hub
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      name: hub
+  template:
+    metadata:
+      labels:
+        name: hub
+    spec:
+      containers:
+      - name: hub
+        image: freefreep/ui:8
+      - name: be
+        image: freefreep/be
+      - name: db
+        image: freefreep/db
+      nodeSelector:
+        beta.kubernetes.io/os: linux
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: hub
+  labels:
+    name: hub
 spec:
-  selector:
-    app: my-app
   type: NodePort
   ports:
   - port: 80
     targetPort: 5173
     nodePort: 32545
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: my-app-deployment
-spec:
-  replicas: 1
   selector:
-    matchLabels:
-      app: my-app
-  template:
-    metadata:
-      labels:
-        app: my-app
-    spec:
-      containers:
-        - name: ui
-          image: freefreep/ui
-          ports:
-            - containerPort: 5173
-        - name: be
-          image: freefreep/be
-          ports:
-            - containerPort: 8091
-        - name: db
-          image: freefreep/db
-          ports:
-            - containerPort: 5432
+    name: hub
+---
