--- a/onlineboutique/kubernetes-manifests/federationservice-ui.yaml
+++ b/onlineboutique/kubernetes-manifests/federationservice-ui.yaml
@@ -31,7 +31,7 @@ metadata:
   labels:
     name: federationservice-ui
 spec:
-  type: NodePort
+  #type: NodePort
   ports:
   - port: 5173
     targetPort: 5173
