--- a/onlineboutique/kubernetes-manifests/federationservice-ui.yaml
+++ b/onlineboutique/kubernetes-manifests/federationservice-ui.yaml
@@ -20,7 +20,7 @@ spec:
         image: federationservice-ui
         env:
         - name: VITE_FEDERATION_SERVICE
-          value: "http://federationservice-be:8091"
+          value: "http://${FEDERATIONSERVICE_BE_SERVICE_HOST}:8091"
       nodeSelector:
         beta.kubernetes.io/os: linux
 ---
