--- a/onlineboutique/kubernetes-manifests/federationservice-db.yaml
+++ b/onlineboutique/kubernetes-manifests/federationservice-db.yaml
@@ -35,7 +35,7 @@ metadata:
   labels:
     name: federationservice-db
 spec:
-  #type: NodePort
+  type: ClusterIP
   ports:
   - port: 5432
     targetPort: 5432
