--- a/onlineboutique/src/federationservice/.env
+++ b/onlineboutique/src/federationservice/.env
@@ -2,5 +2,5 @@
 DB_USER=user
 DB_PASSWORD=password
 DB_NAME=shop1
-FEDERATION_SERVER=http://localhost:3000
-AUTH_SERVER=http://localhost:3001
+FEDERATION_SERVER=http://34.159.243.99/
+AUTH_SERVER=http://34.159.243.99/auth/
