--- a/onlineboutique/src/federationservice/.env
+++ b/onlineboutique/src/federationservice/.env
@@ -1,6 +1,6 @@
 # rename file to .env and enter your credentials
 DB_USER=user
 DB_PASSWORD=password
-DB_NAME=shop1
+DB_NAME=federation_service
 FEDERATION_SERVER=http://34.159.243.99/
 AUTH_SERVER=http://34.159.243.99/auth/
