--- a/onlineboutique/src/federationservice/Dockerfile-DB
+++ b/onlineboutique/src/federationservice/Dockerfile-DB
@@ -7,3 +7,9 @@ ENV POSTGRES_DB federation_service
 
 # Copy initialization scripts to docker-entrypoint-initdb.d
 COPY init.sql /docker-entrypoint-initdb.d/
+
+# Set proper permissions for the /var/lib/postgresql/data directory
+USER root
+RUN chown -R postgres:postgres /var/lib/postgresql/data
+RUN chmod 700 /var/lib/postgresql/data
+USER postgres
