--- a/onlineboutique/src/federationservice/.env
+++ b/onlineboutique/src/federationservice/.env
@@ -2,5 +2,5 @@
 DB_USER=user
 DB_PASSWORD=password
 DB_NAME=federation_service
-FEDERATION_SERVER=http://34.159.243.99/
-AUTH_SERVER=http://34.159.243.99/auth/
+FEDERATION_SERVER=http://35.205.192.2:5433
+AUTH_SERVER=http://35.205.192.2:8463
