fix: Update IP addresses

--- a/onlineboutique/skaffold.yaml
+++ b/onlineboutique/skaffold.yaml
@@ -58,6 +58,9 @@ build:
     context: src/federationservice
     docker: 
       dockerfile: Dockerfile-DB
+  env:
+    - name: PUBLIC_IP
+      value: ${PUBLIC_IP}
   tagPolicy:
     gitCommit: {}
   local:
