--- a/onlineboutique/src/federationservice/Dockerfile-UI
+++ b/onlineboutique/src/federationservice/Dockerfile-UI
@@ -6,9 +6,11 @@ RUN npm install
 EXPOSE 5173
 
 # Define the ARG instruction
-ARG PUBLIC_IP
+#ARG PUBLIC_IP
+ARG FEDERATION_SERVER=http://$PUBLIC_IP:5433
+ARG AUTH_SERVER=http://$PUBLIC_IP:8463
 
 # Set the environment variable using the ARG value
-ENV PUBLIC_IP=$PUBLIC_IP
+#ENV PUBLIC_IP=$PUBLIC_IP
 
 CMD [ "npm","run","dev" ] 
