fix: Update IP addresses

--- a/onlineboutique/src/federationservice/.env
+++ b/onlineboutique/src/federationservice/.env
@@ -2,5 +2,5 @@
 DB_USER=user
 DB_PASSWORD=password
 DB_NAME=federation_service
-FEDERATION_SERVER=http://${PUBLIC_IP}:5433
-AUTH_SERVER=http://${PUBLIC_IP}:8463
+#FEDERATION_SERVER=http://${PUBLIC_IP}:5433
+#AUTH_SERVER=http://${PUBLIC_IP}:8463
