--- a/onlineboutique/src/federationservice/Dockerfile-BE
+++ b/onlineboutique/src/federationservice/Dockerfile-BE
@@ -5,4 +5,7 @@ RUN go mod init github.com/ADSP-Project/Federation-Service
 RUN go mod tidy
 RUN go mod download
 
+ARG FEDERATION_SERVER=http://$PUBLIC_IP:5433
+ARG AUTH_SERVER=http://$PUBLIC_IP:8463
+
 ENTRYPOINT ["go", "run", "shop.go", "8091", "shop", "dasdasd"]
