--- a/onlineboutique/src/federationservice/Dockerfile-BE
+++ b/onlineboutique/src/federationservice/Dockerfile-BE
@@ -5,6 +5,8 @@ RUN go mod init github.com/ADSP-Project/Federation-Service
 RUN go mod tidy
 RUN go mod download
 
+ARG PUBLIC_IP
+ENV PUBLIC_IP=$PUBLIC_IP
 ARG FEDERATION_SERVER=http://$PUBLIC_IP:5433
 ARG AUTH_SERVER=http://$PUBLIC_IP:8463
 
