fix: Update IP addresses

--- a/onlineboutique/src/federationservice/Dockerfile-UI
+++ b/onlineboutique/src/federationservice/Dockerfile-UI
@@ -7,7 +7,7 @@ EXPOSE 5173
 
 ARG PUBLIC_IP
 ENV PUBLIC_IP=$PUBLIC_IP
-ARG FEDERATION_SERVER=http://$PUBLIC_IP:5433
-ARG AUTH_SERVER=http://$PUBLIC_IP:8463
+ENV FEDERATION_SERVER="http://$PUBLIC_IP:5433"
+ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
 
 CMD [ "npm","run","dev" ] 
