--- a/onlineboutique/src/federationservice/Dockerfile-BE
+++ b/onlineboutique/src/federationservice/Dockerfile-BE
@@ -7,7 +7,7 @@ RUN go mod download
 
 ARG PUBLIC_IP
 ENV PUBLIC_IP=$PUBLIC_IP
-ARG FEDERATION_SERVER=http://$PUBLIC_IP:5433
-ARG AUTH_SERVER=http://$PUBLIC_IP:8463
+ENV FEDERATION_SERVER="http://$PUBLIC_IP:5433"
+ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
 
 ENTRYPOINT ["go", "run", "shop.go", "8091", "shop", "dasdasd"]
