feat: Rewritten federation service in golang

--- a/socks-shop/kubernetes-manifests/kustomization.yaml
+++ b/socks-shop/kubernetes-manifests/kustomization.yaml
@@ -5,8 +5,9 @@ resources:
 - carts.yaml
 - catalogue-db.yaml
 - catalogue.yaml
+- federationservice.yaml
 - front-end.yaml
-- nextjs-docker.yaml
+#- nextjs-docker.yaml
 - orders-db.yaml
 - orders.yaml
 - payment.yaml
