--- a/socks-shop/newfederationservice/Dockerfile
+++ b/socks-shop/newfederationservice/Dockerfile
@@ -4,9 +4,14 @@ WORKDIR /app
 
 COPY go.mod go.sum ./
 RUN go mod download
-
 COPY . .
 
-RUN go build -o app
+RUN go build -o /go/bin/newfederationservice .
 
-CMD ["./app"]
+WORKDIR /app
+COPY --from=builder /go/bin/newfederationservice /app/server
+
+EXPOSE 3000
+ENTRYPOINT ["/app/server"]
+
+# CMD ["./app"]
