--- a/socks-shop/newfederationservice/Dockerfile
+++ b/socks-shop/newfederationservice/Dockerfile
@@ -1,6 +1,6 @@
-FROM golang:1.17-alpine
+FROM golang:1.20.4-alpine as builder
 
-WORKDIR /app
+WORKDIR /src
 
 COPY go.mod go.sum ./
 RUN go mod download
@@ -8,10 +8,10 @@ COPY . .
 
 RUN go build -o /go/bin/newfederationservice .
 
-WORKDIR /app
-COPY --from=builder /go/bin/newfederationservice /app/server
+WORKDIR /src
+COPY --from=builder /go/bin/newfederationservice /src/server
 
 EXPOSE 3000
-ENTRYPOINT ["/app/server"]
+ENTRYPOINT ["/src/server"]
 
 # CMD ["./app"]
