--- a/onlineboutique/src/federationservice/Dockerfile-UI
+++ b/onlineboutique/src/federationservice/Dockerfile-UI
@@ -9,5 +9,6 @@ ARG PUBLIC_IP
 ENV PUBLIC_IP=$PUBLIC_IP
 ENV FEDERATION_SERVER="http://$PUBLIC_IP:5433"
 ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
+ENV VITE_FEDERATION_SERVICE="http://$PUBLIC_IP:8091"
 
 CMD [ "npm","run","dev" ] 
