--- a/onlineboutique/src/federationservice/Dockerfile-UI
+++ b/onlineboutique/src/federationservice/Dockerfile-UI
@@ -7,8 +7,10 @@ EXPOSE 5173
 
 ARG PUBLIC_IP
 ENV PUBLIC_IP=$PUBLIC_IP
-ENV FEDERATION_SERVER="http://$PUBLIC_IP:5433"
-ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
+#ENV FEDERATION_SERVER=http://$PUBLIC_IP:5433
+ENV FEDERATION_SERVER="http://34.159.243.99/"
+#ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
+ENV AUTH_SERVER="http://34.159.243.99/auth/"
 ENV VITE_FEDERATION_SERVICE="http://$PUBLIC_IP:8091"
 
 CMD [ "npm","run","dev" ] 
