fix: Change to remote hub

--- a/onlineboutique/src/federationservice/Dockerfile-BE
+++ b/onlineboutique/src/federationservice/Dockerfile-BE
@@ -7,7 +7,10 @@ RUN go mod download
 
 ARG PUBLIC_IP
 ENV PUBLIC_IP=$PUBLIC_IP
-ENV FEDERATION_SERVER="http://$PUBLIC_IP:5433"
-ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
+#ENV FEDERATION_SERVER="http://$PUBLIC_IP:5433"
+#ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
+
+ENV FEDERATION_SERVER="http://34.159.243.99/"
+ENV AUTH_SERVER="http://34.159.243.99/auth/"
 
 ENTRYPOINT ["go", "run", "shop.go", "8091", "shop", "dasdasd"]
